--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         volumes:
             - .:/var/www/
             - ./docker/nginx:/etc/nginx/conf.d
-            - ./log:/var/log/nginx/
+            - ./var/log:/var/log/nginx/
         links:
             - php
 
