--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
         "symfony/dotenv": "*",
         "symfony/form": "*",
         "symfony/http-client": "*",
-        "symfony/workflow": "4.3.*"
+        "symfony/workflow": "*",
+        "symfony/http-kernel": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/routing": "^5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "*"
