--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -1,24 +1,28 @@
 FROM php:7.4-fpm
 
-RUN apt-get update \
-    && apt-get install -y \
-        bash \
-        libpq-dev \
-        libicu-dev \
-        libzip-dev \
-        zip \
-        sudo \
-    && docker-php-ext-configure zip --with-libzip \
-    && docker-php-ext-install \
-        pdo \
-        pdo_pgsql \
-        intl \
-        zip \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    && curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer \
+#update utilities
+RUN apt-get update
+
+#install zip
+RUN apt-get install -y \
+    libzip-dev \
+    zip
+
+#install bash
+RUN apt-get install -y \
+    bash
+
+#install php extensions
+RUN docker-php-ext-install \
+    pdo_mysql
+
+#install composer
+RUN curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer \
     && composer self-update
 
+#clean cache
+RUN apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ADD php.ini /usr/local/etc/php/conf.d/
 
