--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -8,7 +8,7 @@ RUN apt-get install -y \
     libzip-dev \
     zip
 
-#install bash
+#install development instruments
 RUN apt-get install -y \
     bash
 
