--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/workflow": "*",
         "symfony/http-kernel": "^5.0",
         "symfony/dependency-injection": "^5.0",
-        "symfony/routing": "^5.0"
+        "symfony/routing": "^5.0",
+        "doctrine/orm": "^2.7"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "*"
