--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
         "symfony/http-kernel": "^5.0",
         "symfony/dependency-injection": "^5.0",
         "symfony/routing": "^5.0",
-        "doctrine/orm": "^2.7"
+        "doctrine/orm": "^2.7",
+        "doctrine/migrations": "^2.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "*"
     },
     "autoload": {
+        "files": [
+            "bootstrap.php"
+        ],
         "psr-4": {
             "App\\": "src/"
         }
