[project] Removed unused packages

--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,7 @@
         "symfony/dependency-injection": "^5.0",
         "symfony/routing": "^5.0",
         "doctrine/orm": "^2.7",
-        "doctrine/migrations": "^2.2",
-        "doctrine/annotations": "^1.8",
-        "doctrine/cache": "^1.10",
-        "symfony/config": "^5.0"
+        "doctrine/migrations": "^2.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "*"
